# PrismPage

./: AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: tauri-build.cmd  tauri-dev.cmd
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_error.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: engines.rs  library.rs  mod.rs
src-tauri/src/services/: engines.rs  library.rs  mod.rs
src/app/: router.tsx
src/features/ai-installer/: engine-manager.tsx
src/features/reader/: reader-page.tsx
src/features/settings/: settings-page.tsx  settings-store.ts  startup-update-notice.tsx  theme-effect.tsx  update-checker.tsx  update-progress-meter.tsx
src/lib/: engines.ts  epub.ts  tauri.ts  updater.ts
src/types/: app.ts  epubjs.d.ts
