[package]
name = "prismpage"
version = "0.1.0"
description = "An image-focused EPUB viewer with AI super-resolution support"
authors = ["SioKo-Shox3"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "prismpage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
base64 = "0.22"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tempfile = "3.23"
thiserror = "2.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
wait-timeout = "0.2"
walkdir = "2.5"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
